fixed layout bug - now 100% screen noScroll

--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -5,8 +5,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 a:link,
