--- a/src/styles/Error.css
+++ b/src/styles/Error.css
@@ -6,14 +6,12 @@
 
 .main {
     display: flex;
-    width: 100%;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
 .big-title {
-    height: 20%;
     font-size: 288px;
     line-height: 10px;
     color: #FF6060;
